[package]
name = "tradernet-sdk-rs"
version = "0.1.1"
edition = "2024"
description = "Rust SDK for the Tradernet REST and WebSocket APIs."
license = "MIT"
readme = "README.md"
keywords = ["tradernet", "trading", "api", "finance", "websocket"]
categories = ["api-bindings", "web-programming::http-client"]
repository = "https://github.com/edc-studio/tradernet-sdk-rs"

[dependencies]
chrono = { version = "0.4", features = ["std"] }
async-stream = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
zip = "0.6"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt", "rt-multi-thread"] }
tokio-tungstenite = "0.23"
url = "2.5"
urlencoding = "2.1"
